fixed alignment for tablet layout

--- a/templates/modern/css/pdf.css
+++ b/templates/modern/css/pdf.css
@@ -93,7 +93,7 @@ body.pdf {
     #skills+ul {
 
         li {
-            /* display: block; */
+            /* display: block;     /\* to display skills in a list form *\/ */
             /* width: 130%; */
         }
 
