increased dl strong width to 20% (was unset) because its default width is causing it to be presented over two lines

--- a/templates/modern/css/pdf.css
+++ b/templates/modern/css/pdf.css
@@ -175,6 +175,7 @@ body.pdf {
         strong {
             float: right;
             margin-top: -2em;
+            width: 20%
         }
         em {
             font-size: 130%;
