--- a/templates/modern/css/screen.css
+++ b/templates/modern/css/screen.css
@@ -191,12 +191,12 @@
     }
 
     h4 {
-        margin: 0em 0em 0em 8.8em;
+        margin: 0em 0em 0em 21%;
         padding: 0.5em 0 0 0;
     }
 
     h4+ul {
-        margin: -0.4em 0 0 10.7em;
+        margin: -0.4em 0 0 21%;
     }
     
     ul li {
