--- a/templates/modern/css/resume.css
+++ b/templates/modern/css/resume.css
@@ -148,6 +148,10 @@ h4+ul {
     display: inline-block;
     padding: 0;
     list-style: none;
+
+    li {
+        margin: 0.5em 0;
+    }
 }
 
 ol {
