html h4-table spacing seems to work fine -- reduced the top margin of table in pdf form

--- a/templates/modern/css/pdf.css
+++ b/templates/modern/css/pdf.css
@@ -185,7 +185,7 @@ body.pdf {
     }
 
     table {
-        margin: .2em 0em .5em 22.5%;
+        margin: -0.6em 0em .5em 22.5%;
         width: 77%;
     }
 
