align blockquote to the right and print out website of CV in pdf

--- a/templates/modern/css/pdf.css
+++ b/templates/modern/css/pdf.css
@@ -23,10 +23,6 @@ body.pdf {
 	    word-wrap: break-word;
     }
 
-    a[href$='.pdf']:after {
-        content: "\00a0\00a0\00a0\00a0\00a0" attr(href); /*add non-breaking whitespace*/
-    }
-
     a[href$='.pdf'] {
 
         background: url(icons/pdf_icon.svg) left center no-repeat;
@@ -34,14 +30,27 @@ body.pdf {
         white-space: nowrap;
         background-size: contain;
     }
+
+    a[href$='.pdf']:after {
+        content: "\00a0\00a0\00a0\00a0\00a0" attr(href); /*add non-breaking whitespace*/
+    }
+
+    a[href$='.html']:after {
+        content: attr(href);
+    }
     
     blockquote {
         top: 40px;
-        right: 50px;
+        right: 80px;
         position: absolute;
+        text-align: right;
 
         a[href$='.pdf'] {
             display: none;
+        }
+        
+        a[href$='.html'] {
+            display: inline;
         }
     }
 
