--- a/templates/modern/css/pdf.css
+++ b/templates/modern/css/pdf.css
@@ -231,7 +231,7 @@ body.pdf {
     #fellowships+table, #travel+table, #programs+table {
 
         td {
-            padding-bottom: 10px;
+            padding-bottom: 10px; /*better spacing between multiline cells*/
         }
         
         td:nth-child(1) {
@@ -261,10 +261,38 @@ body.pdf {
         /* only the widths of h3 and h3+p were redefined, so set them back */
         h3 {
             width: 100%;
-             }
+            margin: 0 0 0.5em;
+
+            strong {
+                float: right;
+                position: relative;
+                top: 8px;
+                font-size: 18px; /*inherited from h3+p*/
+                font-style: bold;
+            }
+        }
+
+        #personalstatement {
+            margin: 0;
+        }
 
         p {
             width: 100%;
+        }
+
+        table {
+            margin: -0.6em 0em .5em 0%;
+            width: 100%;
+        }
+
+        h4 {
+            margin: 0.4em 0 0;
+            padding: 0;
+            font-style: italic;
+        }
+
+        h4+ul {
+            margin: 0;
         }
     }
 }
