updated css for recent version of cv

--- a/templates/modern/css/pdf.css
+++ b/templates/modern/css/pdf.css
@@ -148,13 +148,9 @@ body.pdf {
 
         li {
             display: block;
-            width: 32%;        /*list: 130%; table: 33%*/
+            width: 33%;        /*list: 130%; table: 33%*/
         }
 
-        li:nth-child(1) {
-            width: 36%;
-        }
-        
         dl {
             margin: 0;
             dt {
@@ -253,6 +249,21 @@ body.pdf {
             width: 41%;
         }
     }
+
+    #fellowshipsshort+table,
+    #travelshort+table,
+    #programsshort+table,
+    #conferencesshort+table {
+
+        td {
+            padding-bottom: 0px; /*10px for better spacing between multiline cells*/
+        }
+        
+        td:nth-child(1) {
+            width: 80%;
+        }
+
+    }    
 
     #coursework+table {
         td:nth-child(1) {
